--- a/ui/package.json
+++ b/ui/package.json
@@ -25,13 +25,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "playwright test",
+    "eject": "react-scripts eject",
+    "backend": "cd ../mock-api && npm build && npm start"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.42.1",
+    "prettier": "3.2.5"
   }
 }
