--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,9 +16,9 @@ jobs:
     - name: Install dependencies
       run: cd ui && npm ci
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: cd ui && npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npm run test
+      run: cd ui && npm run test
     - uses: actions/upload-artifact@v4
       if: always()
       with:
