--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,8 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: cd ui && npm ci
+    - name: Install dependencies mock-api
+      run: cd mock-api && npm ci
     - name: Install Playwright Browsers
       run: cd ui && npx playwright install --with-deps
     - name: Run Playwright tests
