--- a/ui/package.json
+++ b/ui/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "playwright test",
     "eject": "react-scripts eject",
-    "backend": "cd ../mock-api && npm build && npm start"
+    "backend": "cd ../mock-api && npm run build && npm start"
   },
   "eslintConfig": {
     "extends": [
